--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <aside class="panel stack">
       <div>
         <h1>🏡 希望旅程</h1>
-        <div class="sub">塞內加爾球星 Sadio Mané 的人生故事，這樣的見證每個人是可以的 ~在球場外，為家鄉創造希望的力量。</div>
+        <div class="sub">塞內加爾球星 Sadio Mané 的人生故事，見證 ~在球場外，為家鄉創造希望的力量，你也可以做到。</div>
       </div>
 
       <div class="kpi">
