--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       </div>
     </main>
 
-    <button id="toggleFooter" class="floating-btn" style="display:none;">📌 前進明天</button>
+    <button id="toggleFooter" class="floating-btn" style="display:none;">📌 行動</button>
 
     <!-- 右：專案資源庫 -->
     <aside class="panel right stack">
