--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
         <div class="mini muted">
       提示：每個月會自動結算運行成本與帶來的長期收益。社群信任會影響募資與志工參與。
         </div>
-      <button class="btn" id="skipBtn">➡️ 跳到結算</button>
-     <button class="btn btn-acc" id="nextBtn">✅ 結算本月</button>
+      <button class="btn" id="skipBtn">➡️ 禱告</button>
+     <button class="btn btn-acc" id="nextBtn">✅ 行動</button>
   </div>
       </div>
     </main>
