--- a/index.html
+++ b/index.html
@@ -393,6 +393,8 @@
         Game.metrics.edu = Math.max(0, Game.metrics.edu - 2);
         Game.metrics.health = Math.max(0, Game.metrics.health - 2);
       }
+      // ⚠️ 新增這行：正常結算 → 扣運行 10
+     Game.metrics.maint = Math.max(0, Game.metrics.maint - 10);
       // 現金不足警示
       if(Game.money < 0 && !skipWarnings){
         alert('注意：現金流為負！請增加收入或減少新建專案。');
@@ -405,8 +407,16 @@
       saveAuto();
     }
     function skipToSettle(){
-      toast('你選擇跳過事件，直接進入結算');
-      settleMonth(true);
+     toast('➡️ 你選擇跳過事件，直接進入結算（收入僅 1/10，無運行消耗）');
+  
+     // 收入只有十分之一
+     Game.money += Game.baseIncome / 10;
+
+    // ⚠️ 跳過時，不扣運行、不計 upkeep，只結算時間
+     Game.month++; if(Game.month>12){ Game.month=1; Game.year++; }
+
+     renderState(); renderProjects(); drawEvents();
+    saveAuto();
     }
 
     // 儲存 / 載入
@@ -455,67 +465,6 @@
       setTimeout(()=>toast('提示：先從「深水井」或「小學翻修」開始，逐步建立信任'), 600);
     })();
 
-    const footerBox = document.getElementById('footerBox');
-    const toggleBtn = document.getElementById('toggleFooter');
-  // 10秒後自動收起
-  setTimeout(()=>{
-    footerBox.style.display = "none";
-    toggleBtn.style.display = "block";
-  },10000);
-  // 點擊浮動按鈕 → 展開 / 收起
-  toggleBtn.addEventListener('click', ()=>{
-    if(footerBox.style.display==="none"){
-      footerBox.style.display="block";
-    }else{
-      footerBox.style.display="none";
-    }
-  });
-
-  const skipBtn = document.getElementById('skipBtn');
-  const nextBtn = document.getElementById('nextBtn');
-  // 假設有個玩家狀態
-  let player = {
-    income: 10000,   // 本月收入
-    cost: 4000,      // 本月支出
-    trust: 50,       // 社群信任度
-    run: 100         // 運行點數
-  };
-  // 跳到結算：收入縮小為十分之一，運行不扣
-  skipBtn.addEventListener('click', () => {
-    console.log("➡️ 跳到結算：收入變成十分之一，運行不扣");
-    runMonthlyCalculation(true);  // isSkip = true
-    showSettlement("➡️ 跳到結算");
-  });
-  // 正常結算：收入正常，運行扣10
-  nextBtn.addEventListener('click', () => {
-    console.log("✅ 正常結算：收入正常，運行扣10");
-    runMonthlyCalculation(false); // isSkip = false
-    showSettlement("✅ 結算本月");
-  });
-  // 結算運算
-  function runMonthlyCalculation(isSkip) {
-    let finalIncome = isSkip ? player.income / 10 : player.income;
-    let net = finalIncome - player.cost;
-    console.log(`收入：${finalIncome}`);
-    console.log(`支出：${player.cost}`);
-    console.log(`淨收益：${net}`);
-    // 更新社群信任度（只是示範）
-    if (net >= 0) {
-      player.trust += 2;
-    } else {
-      player.trust -= 3;
-    }
-    // ✅ 結算本月 → 扣運行10
-    if (!isSkip) {
-      player.run -= 10;
-    }
-    console.log(`社群信任度：${player.trust}`);
-    console.log(`運行：${player.run}`);
-  }
-  // 顯示結算畫面
-  function showSettlement(mode) {
-    alert(`📊 ${mode}\n收入：${player.income}\n支出：${player.cost}\n社群信任：${player.trust}\n運行：${player.run}`);
-  }
 
   </script>
 </body>
