--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
     (function init(){
       renderState(); renderProjects(); drawEvents();
       // 初始提示
-      setTimeout(()=>toast('提示：先從「深水井」或「小學翻修」開始，逐步建立信任'), 600);
+      setTimeout(()=>toast('提示：禱告很重要'), 600);
     })();
 
 
