--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
     (function init(){
       renderState(); renderProjects(); drawEvents();
       // 初始提示
-      setTimeout(()=>toast('提示：禱告很重要，你要安靜你的心，凡事感恩的好處包括增強心理健康，如提升幸福感、減輕焦慮與抑鬱'), 600);
+      setTimeout(()=>toast('提示：禱告很重要，你要安靜你的心，凡事感恩會使你增強心理健康，如提升幸福感、減輕焦慮與抑鬱'), 600);
     })();
 
 
