--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     case 0: // 10%
       finalIncome = 0; 
       Game.baseIncome += 9999; // 永久加職涯月收入
-      toast('✨ 奇蹟降臨！你的職涯月收入永久增加 +9999 ✨');
+      toast('✨ 感恩！你的職涯月收入永久增加 +9999 ✨');
       break;
     case 1: 
       finalIncome = Game.baseIncome / 20;
