--- a/index.html
+++ b/index.html
@@ -220,7 +220,87 @@
         id:"solar", name:"🔆 太陽能路燈", cost: 40000, monthlyUpkeep: 1000,
         effects:{ trust:+2, jobs:+1, maint:+1 }, longTerm:"提高夜間安全與活動"
       },
-    ];
+  {
+    id:"communityMeal", name:"🍲 社區免費餐會", cost: 20000, monthlyUpkeep: 3000,
+    effects:{ trust:+8, maint:+2 }, longTerm:"提供弱勢餐食，增進社群關係"
+  },
+  {
+    id:"youthClub", name:"🏀 青少年週末活動", cost: 30000, monthlyUpkeep: 2000,
+    effects:{ edu:+5, sports:+4, trust:+4 }, longTerm:"帶領青少年正向活動，建立信任"
+  },
+  {
+    id:"elderVisit", name:"👵 長者關懷探訪", cost: 15000, monthlyUpkeep: 1000,
+    effects:{ trust:+6, maint:+1 }, longTerm:"探訪長者，傳遞關懷與陪伴"
+  },
+  {
+    id:"afterSchool", name:"📚 放學輔導班", cost: 40000, monthlyUpkeep: 2500,
+    effects:{ edu:+8, trust:+3 }, longTerm:"輔導弱勢學生，提升學習與信任"
+  },
+  {
+    id:"healthCheck", name:"🩺 社區健康檢查", cost: 50000, monthlyUpkeep: 3000,
+    effects:{ health:+8, trust:+4 }, longTerm:"提供基本健康檢查，增強社群健康意識"
+  },
+  {
+    id:"musicMinistry", name:"🎵 社區音樂服事", cost: 10000, monthlyUpkeep: 500,
+    effects:{ trust:+3, edu:+2 }, longTerm:"透過音樂帶來祝福與社群凝聚"
+  },
+  {
+    id:"workshopSkills", name:"🛠️ 社區技能工作坊", cost: 35000, monthlyUpkeep: 2000,
+    effects:{ jobs:+5, edu:+4, trust:+3 }, longTerm:"教導生活與工作技能，提升自立能力"
+  },
+  {
+    id:"cleanUpDay", name:"🧹 社區清潔日", cost: 10000, monthlyUpkeep: 500,
+    effects:{ maint:+5, trust:+2 }, longTerm:"組織社區清潔活動，改善居住環境"
+  },
+  {
+    id:"charityDrive", name:"🎁 社區物資捐贈", cost: 25000, monthlyUpkeep: 1000,
+    effects:{ trust:+6, maint:+1 }, longTerm:"收集與分發物資給有需要的人"
+  },
+  {
+    id:"storyTime", name:"📖 社區親子說故事", cost: 8000, monthlyUpkeep: 500,
+    effects:{ edu:+3, trust:+3 }, longTerm:"透過親子故事活動建立良好社區互動"
+  },
+      {
+    id:"streetArt", name:"🎨 街頭藝術計畫", cost: 40000, monthlyUpkeep: 500,
+    effects:{ trust:+5, edu:+2 }, longTerm:"美化社區環境，吸引觀光與創意人才"
+  },
+  {
+    id:"recycleHub", name:"♻️ 社區資源回收中心", cost: 50000, monthlyUpkeep: 1000,
+    effects:{ maint:+3, trust:+2 }, longTerm:"提升環保意識，減少浪費"
+  },
+  {
+    id:"techLab", name:"💻 創客實驗室", cost: 90000, monthlyUpkeep: 2500,
+    effects:{ edu:+8, jobs:+5, trust:+3 }, longTerm:"培養科技技能與創業能力"
+  },
+  {
+    id:"elderCare", name:"👵 長者關懷中心", cost: 80000, monthlyUpkeep: 1500,
+    effects:{ trust:+6, maint:+1 }, longTerm:"提升社區關懷與老人福祉"
+  },
+  {
+    id:"urbanGarden", name:"🌿 都市共享花園", cost: 30000, monthlyUpkeep: 500,
+    effects:{ edu:+2, trust:+3, maint:+2 }, longTerm:"改善城市綠化與社群互動"
+  },
+  {
+    id:"culturalFest", name:"🎭 社區文化節", cost: 60000, monthlyUpkeep: 2000,
+    effects:{ trust:+8, edu:+2 }, longTerm:"促進文化交流與社群凝聚"
+  },
+  {
+    id:"bikeLane", name:"🚴 安全自行車道", cost: 70000, monthlyUpkeep: 1500,
+    effects:{ maint:+4, trust:+3 }, longTerm:"鼓勵低碳運輸與健康生活"
+  },
+  {
+    id:"emergencyKit", name:"🧰 災害應變物資庫", cost: 50000, monthlyUpkeep: 1000,
+    effects:{ maint:+5, trust:+2 }, longTerm:"提升社區韌性與緊急應變能力"
+  },
+  {
+    id:"startupFund", name:"🚀 青年創業基金", cost: 100000, monthlyUpkeep: 0,
+    effects:{ jobs:+10, trust:+4 }, longTerm:"支持年輕創業者，刺激經濟活力"
+  },
+  {
+    id:"solarFarm", name:"☀️ 小型太陽能農場", cost: 120000, monthlyUpkeep: 3000,
+    effects:{ trust:+3, maint:+2, jobs:+2 }, longTerm:"生產再生能源，改善環境與就業"
+  }
+);
 
     // 隨機事件池
     const EVENTS = [
